--- a/assents/css/styles.css
+++ b/assents/css/styles.css
@@ -76,6 +76,7 @@
     font-size: 30px;
     text-align: center;
     padding: 15px;
+    margin-bottom: 30px;
 }
 
 input{
@@ -125,5 +126,10 @@ body{
 }
 
 #in-empresa{
-    
+    background-color:  rgb(187, 187, 187);
+    margin-top: 10px;
+    width: 50%;
+    margin-left: 25%;
+    font-size: 15px;
+    cursor: pointer;   
 }
