Actualizacion previo a entrega

--- a/assents/css/styles.css
+++ b/assents/css/styles.css
@@ -117,7 +117,7 @@ body{
 
 #boton-rest{
     background-color: #094375;
-    color: white;
+    color: rgb(255, 255, 255);
     margin-top: 10px;
     width: 20%;
     margin-left: 40%;
