Actualizacion 2 previo a entrega

--- a/assents/css/styles.css
+++ b/assents/css/styles.css
@@ -42,7 +42,8 @@
     width: 50%;
     margin-left: 25%;
     font-size: 15px;
-    cursor: pointer;   
+    cursor: pointer; 
+    border: 0px;  
 }
 
 #botones{
